[package]
name = "did"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "did"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []
anchor-debug = []
no-entrypoint = []
cpi = []
custom-panic = []
no-idl = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = {version = "0.30.1", features = ["metadata"]}
solana-program = "1.18.17"
